Refactored all games to be embedded

--- a/games/2025-2026/t1/cars/index.html
+++ b/games/2025-2026/t1/cars/index.html
@@ -158,8 +158,9 @@
                 Cars
             </p>
             <div class="meta">
-                <strong>Created by:</strong> BB<br>
-                <strong>Published:</strong> November 21, 2025
+                <strong>Created by: BB</strong><br>
+                <strong>Published: November 19, 2025</strong><br>
+                <a href="https://studio.code.org/projects/gamelab/v-92Ix2Ma5tUVLgu-6vdZZIUXXdSIpHhF-u0OpYa0O8">Code.org Source</a>
             </div>
         </div>
     </div>
