--- a/games/2025-2026/t1/cash-clicker/index.html
+++ b/games/2025-2026/t1/cash-clicker/index.html
@@ -160,6 +160,7 @@
             <div class="meta">
                 <strong>Created by:</strong> JH<br>
                 <strong>Published:</strong> November 21, 2025
+                <a href="https://studio.code.org/projects/gamelab/VbRc8V2mCeQjdaxWUALw2KUsL844QI650cUBaBMGkbg">Code.org Source</a>
             </div>
         </div>
     </div>
