--- a/games/2025-2026/t1/cfb-27/index.html
+++ b/games/2025-2026/t1/cfb-27/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CFB 27 - SeeSeePortal</title>
+    <title>Cash Clicker - SeeSeePortal</title>
     <style>
         * {
             margin: 0;
@@ -160,6 +160,7 @@
             <div class="meta">
                 <strong>Created by:</strong> RA<br>
                 <strong>Published:</strong> November 21, 2025
+                <a href="https://studio.code.org/projects/gamelab/oOA1W-Prh9IvnVJnsPKdD-G6i6hWAqQ1ZdmhMnNRRZA">Code.org Source</a>
             </div>
         </div>
     </div>
