--- a/games/2025-2026/t1/clickety/index.html
+++ b/games/2025-2026/t1/clickety/index.html
@@ -159,6 +159,7 @@
             <div class="meta">
                 <strong>Created by:</strong> JP<br>
                 <strong>Published:</strong> November 21, 2025
+                <a href="https://studio.code.org/projects/gamelab/pvRVNPd91SKA0o67bZxnBKg-ilNacd3wse1xAbn2Gk8">Code.org Source</a>
             </div>
         </div>
     </div>
