--- a/games/2025-2026/t1/level-devil/index.html
+++ b/games/2025-2026/t1/level-devil/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alien Fight - SeeSeePortal</title>
+    <title>Level Devil - SeeSeePortal</title>
     <style>
         * {
             margin: 0;
@@ -149,17 +149,20 @@
     
     <div class="game-container">
         <div class="game-frame">
+            <!--TODO: This will need to be updated when embed link is shared.-->
             <iframe src="https://studio.code.org/projects/gamelab/VbRc8V2mCeQjdaxWUALw2KUsL844QI650cUBaBMGkbg/embed" class="game-iframe" scrolling="no"></iframe>
         </div>
 
         <div class="game-info">
-            <h1>Cash Clicker</h1>
+            <h1>Level Devil</h1>
             <p class="description">
-                The player needs to collect all the coins without getting hit by the aliens. This is because the aliens are trying to save their coins and the player is trying to take them.
+                You run through levels avoiding tricks that try to kill you.
             </p>
             <div class="meta">
-                <strong>Created by:</strong> EF<br>
+                <strong>Created by:</strong> AF<br>
                 <strong>Published:</strong> November 21, 2025
+                <!--TODO: This will need to be updated when embed link is shared.-->
+                <a href="https://studio.code.org/projects/gamelab/oOA1W-Prh9IvnVJnsPKdD-G6i6hWAqQ1ZdmhMnNRRZA">Code.org Source</a>
             </div>
         </div>
     </div>
