--- a/games/2025-2026/t1/manage-a-shedletsky/index.html
+++ b/games/2025-2026/t1/manage-a-shedletsky/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -160,6 +160,8 @@
             <div class="meta">
                 <strong>Created by:</strong> XL<br>
                 <strong>Published:</strong> November 21, 2025
+            </div>
+                <a href="https://studio.code.org/projects/gamelab/HKLU8XWkWJcXgBARBH-nHmOFE8m5O8k1aWzB9Da-Gq4">Code.org Source</a>
             </div>
         </div>
     </div>
