--- a/games/2025-2026/t1/risky-steps/index.html
+++ b/games/2025-2026/t1/risky-steps/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pong Updated - SeeSeePortal</title>
+    <title>Risky Steps - SeeSeePortal</title>
     <style>
         * {
             margin: 0;
@@ -149,18 +149,18 @@
     
     <div class="game-container">
         <div class="game-frame">
-            <iframe src="https://studio.code.org/projects/gamelab/6D08DhBozc5a3HXYmAHiPyAQhiOM39KEJ9ePC78A6ww/embed" class="game-iframe" scrolling="no"></iframe>
+            <iframe src="https://studio.code.org/projects/gamelab/Ap95Ubufzw-p2RG7QA7Gyf7dSnkzXkqsssgvVHus2eo/embed" class="game-iframe" scrolling="no"></iframe>
         </div>
 
         <div class="game-info">
-            <h1>Pong - Updated</h1>
+            <h1>Risky Steps</h1>
             <p class="description">
-                Pong is fun and exciting 2-player game. It is a classic, one of the first video games created.
-            </p>
+                At the start of each round, player chooses a number 1-5. If someone else chose the same number, you BOTH stay. If you are the ONLY one who chose your number, you advance that # of steps! Don’t get greedy…
+                </p>
             <div class="meta">
-                <strong>Created by:</strong> WB<br>
+                <strong>Created by:</strong> EN<br>
                 <strong>Published:</strong> November 21, 2025
-                <a href="https://studio.code.org/projects/gamelab/6D08DhBozc5a3HXYmAHiPyAQhiOM39KEJ9ePC78A6ww/">Code.org Source</a>
+                <a href="https://studio.code.org/projects/gamelab/Ap95Ubufzw-p2RG7QA7Gyf7dSnkzXkqsssgvVHus2eo">Code.org Source</a>
             </div>
         </div>
     </div>
