--- a/index.html
+++ b/index.html
@@ -239,15 +239,16 @@
                 author: "MK",
                 folder: "games/2025-2026/t1/hollow-knight-v-hornet"
             },
-            {
-                title: "Levil Devil",
-                trimester: "trimester1",
-                thumbnail: "games/2025-2026/t1/level-devil/gametile-image/cf8bd538-b949-4d5d-87fc-3b6741ef9b1e.png",
-                description: "You run through levels avoiding tricks that try to kill you.",
-                players: "1",
-                author: "AF",
-                folder: "games/2025-2026/t1/level-devil"
-            },
+            // Commenting out for now because missing embed link.
+            //{
+            //    title: "Levil Devil",
+            //    trimester: "trimester1",
+            //    thumbnail: "games/2025-2026/t1/level-devil/gametile-image/cf8bd538-b949-4d5d-87fc-3b6741ef9b1e.png",
+            //    description: "You run through levels avoiding tricks that try to kill you.",
+            //    players: "1",
+            //    author: "AF",
+            //    folder: "games/2025-2026/t1/level-devil"
+            //},
             {
                 title: "Manage a Shedletsky",
                 trimester: "trimester1",
