--- a/games/2025-2026/t1/test-game-embed/index.html
+++ b/games/2025-2026/t1/test-game-embed/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Title - SeeSeePortal</title>
+    <title>Space Adventures - SeeSeePortal</title>
     <style>
         * {
             margin: 0;
@@ -161,6 +161,7 @@
             <div class="meta">
                 <strong>Created by:</strong> AJ<br>
                 <strong>Published:</strong> November 15, 2025
+                <a href="https://studio.code.org/projects/gamelab/oOA1W-Prh9IvnVJnsPKdD-G6i6hWAqQ1ZdmhMnNRRZA">Code.org Source</a>
             </div>
         </div>
     </div>
